nettoyage de projet

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ DATA/
 *.MOV
 *.mp4
 *.MP4
-
-# Ignorer les fichiers spécifiques
-src/model_creation/train_and_test/test_video/video_analysée.mp4
+Data_csv/
+videos_for_test/
+*.pyc
+__pycache__/
+src/model_creation_with_cnn+lstm/train_and_test/test_video/video_analysée.mp4
+/src/Pose_estimation/videos_for_test/
+/src/Pose_estimation/Data_csv/
